--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-dlib==19.22.99
+dlib==19.23.1
 face-recognition==1.3.0
 face-recognition-models==0.3.0
-matplotlib==3.4.2
-numpy==1.19.5
-opencv-python==4.5.2.54
+matplotlib==3.5.1
+numpy==1.21.6
+opencv-python==4.5.5.64
+tensorflow-gpu==2.8.0
